force-app/main/default/objects/Laser_Vein_removal__c/Laser_Vein_removal__c.object-meta.xml
<CustomObject>
    <label>Laser Vein removal</label>
    <nameField>
        <label>Laser Vein removal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laser Vein removals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>