force-app/main/default/objects/Laser_Vein_removal__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Laser Vein removals</relationshipLabel>
    <relationshipName>Laser_Vein_removals</relationshipName>
    <type>Lookup</type>
</CustomField>