force-app/main/default/objects/Laser_Vein_removal__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Laser Vein removals</relationshipLabel>
    <relationshipName>Laser_Vein_removals</relationshipName>
    <type>Lookup</type>
</CustomField>