force-app/main/default/objects/Laser_Vein_removal__c/fields/Improvement_since_last_treatment__c.field-meta.xml
<CustomField>
    <fullName>Improvement_since_last_treatment__c</fullName>
    <label>Improvement since last treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>