force-app/main/default/objects/Laser_Vein_removal__c/fields/Lux_lotion_applied__c.field-meta.xml
<CustomField>
    <fullName>Lux_lotion_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lux lotion applied</label>
    <type>Checkbox</type>
</CustomField>