force-app/main/default/objects/Laser_Vein_removal__c/fields/Self_tanner_spray_tanner_in_last_7_days__c.field-meta.xml
<CustomField>
    <fullName>Self_tanner_spray_tanner_in_last_7_days__c</fullName>
    <label>Self-tanner/spray tanner in last 7 days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>