force-app/main/default/objects/Laser_Vein_removal__c/fields/Spot_size__c.field-meta.xml
<CustomField>
    <fullName>Spot_size__c</fullName>
    <label>Spot size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.5 mm</fullName>
            </value>
            <value>
                <fullName>3 mm</fullName>
            </value>
            <value>
                <fullName>6 mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>